src/objects/loan__Collateral_Junction__c.object
<CustomObject>
    <fields>
        <fullName>loan__Asset_Type__c</fullName>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Policy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Description__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Collateral</relationshipLabel>
        <relationshipName>Collateral</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Collateral</label>
    <nameField>
        <displayFormat>CJID-{0000000000}</displayFormat>
        <label>Collateral ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>